--- a/Texty/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Texty/Views/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SHc-Ua-YFH">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Conversations View Controller-->
+        <!--Chats-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConversationsViewController" customModule="Texty" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,11 +19,96 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="r7Q-zg-uAZ"/>
+                    <navigationItem key="navigationItem" title="Chats" id="r7Q-zg-uAZ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1849.2753623188407" y="79.6875"/>
+            <point key="canvasLocation" x="1567" y="698"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="qFM-85-57o">
+            <objects>
+                <tabBarController id="SHc-Ua-YFH" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ele-tw-mHW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="bW1-vQ-Hca" kind="relationship" relationship="viewControllers" id="fbQ-EM-2rZ"/>
+                        <segue destination="Y6A-4h-6FD" kind="relationship" relationship="viewControllers" id="lvy-49-Sap"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6EP-II-gI5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2257" y="-888"/>
+        </scene>
+        <!--Chats-->
+        <scene sceneID="1wA-4u-xMR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bW1-vQ-Hca" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Chats" id="KI4-Rb-YIy"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="i6X-BA-9xK">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="5Je-l6-H8c"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dmO-ZG-RLh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1568" y="-65"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="18v-ZD-uzf">
+            <objects>
+                <navigationController id="Y6A-4h-6FD" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" id="oh5-1d-lX9"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Dgv-cH-Hrb">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Yht-mN-1YR" kind="relationship" relationship="rootViewController" id="i2W-2S-LR2"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4eV-ev-5Kg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2917" y="-66"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="BL2-Ak-c5V">
+            <objects>
+                <viewController id="Yht-mN-1YR" customClass="ProfileViewController" customModule="Texty" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="o4c-4Y-aaQ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="FZS-Ij-zyP">
+                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="nuq-nJ-6cg"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nuq-nJ-6cg" firstAttribute="bottom" secondItem="FZS-Ij-zyP" secondAttribute="bottom" id="23t-Kz-OGd"/>
+                            <constraint firstItem="nuq-nJ-6cg" firstAttribute="trailing" secondItem="FZS-Ij-zyP" secondAttribute="trailing" id="8WS-fS-DfI"/>
+                            <constraint firstItem="FZS-Ij-zyP" firstAttribute="leading" secondItem="nuq-nJ-6cg" secondAttribute="leading" id="dle-2W-xAi"/>
+                            <constraint firstItem="FZS-Ij-zyP" firstAttribute="top" secondItem="nuq-nJ-6cg" secondAttribute="top" id="szT-qb-jK0"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Profile" id="GI9-XM-rDQ"/>
+                    <connections>
+                        <outlet property="tableView" destination="FZS-Ij-zyP" id="NUJ-TU-aji"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eAg-vZ-eHJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2917" y="698"/>
         </scene>
     </scenes>
     <resources>
